--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="https://i.postimg.cc/CxH08TsR/logo-1.png" alt="Empire Builders" height="50" class="me-2">
+            <img src="https://i.postimg.cc/CxH08TsR/logo-1.png" alt="Empire Builders" width="30" height="24" class="me-2">
             Empire Builders
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
