--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="card-footer bg-light">
                 <div class="input-group">
                     <input type="text" class="form-control" id="userInput" placeholder="Type your message..."
-                        onkeypress="if(event.key === 'Enter') window.chatbot.sendMessage()">
+                        onkeypress="if(event.key === 'Enter') window.chatbot.sendMessage()">&nbsp;&nbsp;&nbsp;&nbsp;
                     <button class="btn btn-primary" onclick="window.chatbot.sendMessage()">
                         <i class="fas fa-paper-plane"></i>
                     </button>
